# tap-turso

./: .gitignore  LICENSE  README.md  config.sample.json  pyproject.toml
tap_turso/: __init__.py  streams.py  tap.py
tests/: __init__.py  conftest.py  test_streams.py  test_tap.py
